# DR-Agent

./: .gitignore  PROJECT_STRUCTURE.md  README.md  ablations.py  app.py  demo.py  dr_agent.py  dragent_interactive.ipynb  evaluation.py  input_validation.py  pyproject.toml  requirements.txt  setup.sh  test_01_count1.py  test_02_count3.py  test_03_count7.py  test_04_infeasible.py
apps/: app.py
dragent/: __init__.py  agent.py  config.py  input_validation.py
examples/: demo.py
notebooks/: dragent_interactive.ipynb
scripts/: ablations.py  evaluation.py
tests/: test_ablation_appliance_count_1.py  test_ablation_appliance_count_3.py  test_ablation_appliance_count_7.py  test_ablation_infeasible_single_appliance.py
